// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component should render correctly when the display is block 1`] = `
Array [
  ".natds-button-0-2-1 {}
.natds-label-0-2-2 {
  color: #333333;
  font-size: 14px;
  font-family: Roboto, sans-serif;
  font-weight: 500;
  line-height: 1.5;
  letter-spacing: 1.23px;
  text-transform: uppercase;
}
.natds-button-d0-0-2-3 {
  width: 100%;
  border: 0;
  cursor: pointer;
  height: 40px;
  outline: 0;
  padding: 8px 16px;
  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14);
  border-radius: 4px;
  background-color: #f4ab34;
}
.natds-button-d0-0-2-3:hover {
  background-color: #ef8426;
}
.natds-button-d0-0-2-3:disabled {
  cursor: default;
  background-color: #bbbbbb;
}",
  <div>
    <button
      class="natds-button-0-2-1 natds-button-d0-0-2-3"
      type="button"
    >
      <span
        class="natds-label-0-2-2"
      >
        button
      </span>
    </button>
  </div>,
]
`;

exports[`Button component should render correctly when the size is medium 1`] = `
Array [
  ".natds-button-0-2-1 {}
.natds-label-0-2-2 {
  color: #333333;
  font-size: 14px;
  font-family: Roboto, sans-serif;
  font-weight: 500;
  line-height: 1.5;
  letter-spacing: 1.23px;
  text-transform: uppercase;
}
.natds-button-d0-0-2-3 {
  border: 0;
  cursor: pointer;
  height: 48px;
  outline: 0;
  padding: 8px 16px;
  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14);
  border-radius: 4px;
  background-color: #f4ab34;
}
.natds-button-d0-0-2-3:hover {
  background-color: #ef8426;
}
.natds-button-d0-0-2-3:disabled {
  cursor: default;
  background-color: #bbbbbb;
}",
  <div>
    <button
      class="natds-button-0-2-1 natds-button-d0-0-2-3"
      type="button"
    >
      <span
        class="natds-label-0-2-2"
      >
        button
      </span>
    </button>
  </div>,
]
`;

exports[`Button component should render correctly when the size is semi 1`] = `
Array [
  ".natds-button-0-2-1 {}
.natds-label-0-2-2 {
  color: #333333;
  font-size: 14px;
  font-family: Roboto, sans-serif;
  font-weight: 500;
  line-height: 1.5;
  letter-spacing: 1.23px;
  text-transform: uppercase;
}
.natds-button-d0-0-2-3 {
  border: 0;
  cursor: pointer;
  height: 32px;
  outline: 0;
  padding: 8px 16px;
  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14);
  border-radius: 4px;
  background-color: #f4ab34;
}
.natds-button-d0-0-2-3:hover {
  background-color: #ef8426;
}
.natds-button-d0-0-2-3:disabled {
  cursor: default;
  background-color: #bbbbbb;
}",
  <div>
    <button
      class="natds-button-0-2-1 natds-button-d0-0-2-3"
      type="button"
    >
      <span
        class="natds-label-0-2-2"
      >
        button
      </span>
    </button>
  </div>,
]
`;

exports[`Button component should render correctly with default props 1`] = `
Array [
  ".natds-button-0-2-1 {}
.natds-label-0-2-2 {
  color: #333333;
  font-size: 14px;
  font-family: Roboto, sans-serif;
  font-weight: 500;
  line-height: 1.5;
  letter-spacing: 1.23px;
  text-transform: uppercase;
}
.natds-button-d0-0-2-3 {
  border: 0;
  cursor: pointer;
  height: 40px;
  outline: 0;
  padding: 8px 16px;
  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14);
  border-radius: 4px;
  background-color: #f4ab34;
}
.natds-button-d0-0-2-3:hover {
  background-color: #ef8426;
}
.natds-button-d0-0-2-3:disabled {
  cursor: default;
  background-color: #bbbbbb;
}",
  <div>
    <button
      class="natds-button-0-2-1 natds-button-d0-0-2-3"
      type="button"
    >
      <span
        class="natds-label-0-2-2"
      >
        button
      </span>
    </button>
  </div>,
]
`;
